Overflow resizing working. Small bug (check trello)

--- a/src/Components/MovableWindow/WindowFrame/window_frame.css
+++ b/src/Components/MovableWindow/WindowFrame/window_frame.css
@@ -1,3 +1,16 @@
+/*
+    WINDOW CONTAINER
+*/
+
+.window-area {
+    position: relative;
+    display: grid;
+}
+
+/*
+    WINDOW
+*/
+
 .window-border {
     min-height: var(--window-border-minheight);
     min-width: var(--window-border-minwidth);
@@ -10,13 +23,17 @@
     transition: width 2, height 2s, transform 2s, position 2s;
 }
 
+/*
+    WINDOW HEADER
+*/
+
 .window-header {
     font-size: var(--window-header-textsize);
     text-shadow: var(--header-textshadow);
     margin: var(--window-header-margin);
-    height: var(--window-header-height);
     width: var(--window-header-width);
     display: flex;
+    text-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
 }
@@ -29,28 +46,50 @@
     border: none;
     font-weight: 1000;
     font-size: var(--window-button-textsize);
-    /* padding-top: 2svh; */
 }
+
+/*
+    WINDOW CONTENT
+*/
 
 .window-content {
     padding: 5px;
     font-size: var(--window-content-textsize);
 }
 
-.window-area {
-    position: relative;
-    display: grid;
-}
+/*
+    MINIMZED WINDOWS
+*/
 
 .window.minimized {
-    width: min-content;
     transition: transform 0.2s ease-in-out;
+    margin-left: var(--minimized-space);
 }
-
 
 .window.minimized .window-header {
     justify-content: left;
+    margin: 0;
 }
+
+.window.minimized .window-border {
+    min-width: unset;
+    border: none;
+    padding: 0.4svw;
+    background-color: #2f4346;
+    box-shadow: 0 0 0 var(--minimized-space) var(--grey-shadow);
+}
+.window.minimized .window-content {
+    display: none;
+}
+
+.window-minimizer :last-child .window-border {
+    box-shadow: none;
+}
+
+/*
+    MEDIA QUERIES
+*/
+
 /*Extra small devices (phones, 600px and down)*/
 @media only screen and (max-width: 600px) {
     .window-content {
